[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Ui/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Game.gd" type="Script" id=3]
[ext_resource path="res://src/Ui/PauseMenu.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 300 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 300 )
current = true
limit_smoothed = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false
[connection signal="on_exit_pressed" from="CanvasLayer/PauseMenu" to="." method="_on_PauseMenu_on_exit_pressed"]
[connection signal="on_resume_pressed" from="CanvasLayer/PauseMenu" to="." method="_on_PauseMenu_on_resume_pressed"]
